--- a/wordLimit.html
+++ b/wordLimit.html
@@ -21,7 +21,7 @@
             
             // 글자수 제한
             if (content.length > 200) {
-                // 200자 부터는 타이핑 되지 않도록 글자 수 자름
+                // 200자 부터는 타이핑 되지 않도록 글자 수 자름!
                 $(this).val($(this).val().substring(0, 200));
             };
         });
