--- a/0113.html
+++ b/0113.html
@@ -5,31 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20230114 스타벅스 메인</title>
+    <link rel="stylesheet" href="0113.css">
 </head>
-    <style>
-        header {display: flex;}
-        a {text-decoration: none; color: #000;}
-        .logo_img {width: 100px; width: 100px;}
-        .info_con {display: flex;}
-        .info_con .info {font-size: 14px; color: #666; display: flex;}
-        .info_con .info a:hover {text-decoration: dashed;}
-        .info_con .menu a:hover {text-decoration: dashed; color: green;}
-    </style>
+
 <body>
     <header>
-        <div>
-            <a href="">
-                <div class="logo_con">
-                    <img class="logo_img" src="company_pic02.jpg" alt="로고 이미지">
-                </div>
-            </a>
+        <div class="con">
+            <div class="logo_con">    
+                <a href="">
+                    <img class="logo_img" src="starbucks_logo.png" alt="로고 이미지">
+                </a>
+            </div>
             <div class="info_con">
                 <ul class="info">
                     <a href=""><li>Sign in</li></a>
                     <a href=""><li>My Starbucks</li></a>
                     <a href=""><li>Customer Service & Ideas</li></a>
                     <a href=""><li>Find a Store</li></a>
-                    <a href=""><li><img src="company_pic03.jpg" alt="검색 아이콘"></li></a>
+                    <a href=""><li><img src="starbucks_search_icon.png" alt="검색 아이콘"></li></a>
                 </ul>
                 <ul class="menu">
                     <a href=""><li>COFFEE</li></a>
