--- a/0113.html
+++ b/0113.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20230114 스타벅스 메인</title>
     <link rel="stylesheet" href="0113.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+    <!-------- header -------->
     <header>
         <div class="con">
             <div class="logo_con">    
                 <a href="">
-                    <img class="logo_img" src="starbucks_logo.png" alt="로고 이미지">
+                    <img class="logo_img" src="image/starbucks_logo.png" alt="로고 이미지">
                 </a>
             </div>
             <div class="info_con">
@@ -22,7 +28,7 @@
                     <a href=""><li>My Starbucks</li></a>
                     <a href=""><li>Customer Service & Ideas</li></a>
                     <a href=""><li>Find a Store</li></a>
-                    <a href=""><li><img src="starbucks_search_icon.png" alt="검색 아이콘"></li></a>
+                    <a href=""><li class="info_search_li"><img src="image/starbucks_search_icon.png" alt="검색 아이콘"></li></a>
                 </ul>
                 <ul class="menu">
                     <a href=""><li>COFFEE</li></a>
@@ -36,5 +42,23 @@
             </div>
         </div>
     </header>
+
+    <!-- main -->
+    <main>
+        <section>
+            <div class="section1_bg">
+                <div class="section1_column1">
+                    <img src="image/2023_newyear_top_logo.png" alt="Find your luck 이미지">
+                    <div>자세히 보기</div>
+                </div>
+                <div class="section1_column2">
+                    <img src="image/2023_newyear_top_drink_1_1.png" alt="골든 미모사 그린 티 이미지">
+                    <img src="image/2023_newyear_top_drink_2_1.png" alt="블랙 햅쌀 고봉 라떼 이미지">
+                    <img src="image/2023_newyear_top_drink_3_1.png" alt="스타벅스 튜메릭 라테 이미지">
+                </div>
+            </div>
+        </section>
+    </main>
+    
 </body>
 </html>
