--- a/0113.html
+++ b/0113.html
@@ -49,7 +49,7 @@
             <div class="section1_bg">
                 <div class="section1_column1">
                     <img src="image/2023_newyear_top_logo.png" alt="Find your luck 이미지">
-                    <div>자세히 보기</div>
+                    <button>자세히 보기</button>
                 </div>
                 <div class="section1_column2">
                     <img src="image/2023_newyear_top_drink_1_1.png" alt="골든 미모사 그린 티 이미지">
