--- a/0113.html
+++ b/0113.html
@@ -58,6 +58,47 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="section2_notice_promotion">
+                <div class="notice">
+                    <span>공지사항</span>
+                    <span>시스템 개선 및 서비스 점검 안내</span>
+                    <a href=""><img src="image/btn_notice_plus.png" alt="공지사항 플러스 이미지"></a>
+                </div>
+                <div class="promotion">
+                    <span>스타벅스 프로모션</span>
+                    <a href=""><img src="image/btn_prom_down.png" alt="프로모션 아래 화살표 이미지"></a>
+                </div>
+            </div>
+            <div class="section2_reward">
+                <div class="reward_img">
+                    <img src="image/rewards-logo.png" alt="리워드 로고 이미지">
+                </div>
+                <div class="reward_text_con">
+                    <div class="reward_text1">
+                        <div>
+                            <p>스타벅스만의 특별한 헤택, 스타벅스 리워드</p>
+                            <p>스타벅스 회원이세요? 로그인을 통해 나만의 리워드를 확인해보세요.</p>
+                            <p>스타벅스 회원이 아니세요? 가입을 통해 리워드 혜택을 즐기세요.</p>
+                        </div>
+                        <div>
+                            <a href=""><div>회원가입</div></a>
+                            <a href=""><div>로그인</div></a>
+                        </div>
+                    </div>
+                    <div class="reward_text2">
+                        <div>
+                            <p>회원 가입 후, 스타벅스 e-Gift Card를 "나에게 선물하기"로 구매하시고, 편리하게 등록하세요!</p>
+                            <p>카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를 하시면 무료 음료쿠폰을 드립니다!</p>
+                        </div>
+                        <div>
+                            <a href=""><div>e-Gift Card 선물하기</div></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
