--- a/0113.html
+++ b/0113.html
@@ -99,6 +99,127 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="section3_elsalvador">
+                <img src="image/2023_newyear_promotion_img.png" alt="엘살바도르 아우아차판 이미지">
+                <div class="elsalvador_text">
+                    <div>
+                        <h2>엘살바도르 아우아차판</h2>
+                        <p>오렌지의 상큼함과 아몬드, 밀크 초콜릿의 풍미가</p>
+                        <p>환상적인 밸런스로 다가오는 블론드 로스트 커피</p>
+                    </div>
+                    <a href=""><span class="elsalvador_more">자세히 보기</span></a>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section4_ethiopia">
+                <div class="section4_ethiopia_con">
+                    <img class="ethiopia_logo" src="image/221220_pc_reserve_logo.png" alt="에티오피아 로고 이미지">
+                    <a href=""><div class="ethiopia_more">자세히 보기</div></a>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section5_pick">
+                <div class="pick_texts">
+                    <img src="image/fav_prod_txt01.png" alt="Pick your favorite 텍스트">
+                    <h2><span>다양한 메뉴</span>를 <br> <span>스타벅스</span>에서 즐겨보세요.</h2>
+                    <p>
+                        스타벅스만의 특별함을 경험할 수 있는 <span>최상의 선택 음료</span><br>
+                        스타벅스 커피와 완벽한 어울림을 <spsan>자랑하는 푸드</spsan><br>
+                        다양한 시도와 디자인으로 <span>가치를 더하는 상품</span><br>
+                        소중한 사람에게 마음을 전하는 가장 좋은 방법 <span>스타벅스 카드</span>
+                    </p>
+                    <a href=""><div class="pick_more">자세히 보기</div></a>
+                </div>
+                <div class="pick_image">
+                    <img src="image/230105_newyear_pick_img.png" alt="Pick your favorite 이미지">
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section6_magazine">
+                <div class="magazine_texts">
+                    <img src="image/reserve_text_pc.png" alt="리저브 매거진 텍스트">
+                    <a href=""><div class="magazine_more">자세히 보기</div></a>
+                </div>
+                <div class="magazine_image">
+                    <img src="image/reserve_visual_pc.png" alt="리저브 매거진 이미지">                    
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section7_store">
+                <div class="store_images">
+                    <img class="store_image1" src="image/221212_main_story_1.png" alt="매장 이미지 1">
+                    <img class="store_image2" src="image/221212_main_story_2.png" alt="매장 이미지 2">
+                </div>
+                <div class="store_texts">
+                    <h2>전국 어디에서나 <span>스타벅스와 함께!</span></h2>
+                    <h3>스타벅스와 함께 커피 한잔의 여유를 가져보세요</h3>
+                    <p>
+                        나의 취향이 머무는 곳, 스타벅스 <span>리저브 매장</span><br>
+                        더욱 편리하게 스타벅스를 만나보는 <span>드라이브 스루 매장</span><br>
+                        함께해서 더 따뜻한 지역사회 소통 공간, <span>커뮤니티 스토어</span>까지.<br>
+                        <br>
+                        다양한 스타벅스 매장이 여러분을 기다립니다.
+                    </p>
+                    <a href=""><span class="store_more">매장 찾기</span></a>
+                </div>
+                <img class="store_coffebean" src="image/store_exp_img03.png" alt="커피콩 이미지">
+                <img class="store_store" src="image/store_exp_img04.png" alt="매장 일러스트 이미지">
+            </div>
+        </section>
+    </main>
+    
+    <footer>
+        <div class="footer_col1">
+            <div class="company">
+                <h5>COMPANY</h5>
+                <span>한눈에 보기</span>
+                <span>스타벅스 사명</span>
+                <span>스타벅스 소개</span>
+                <span>국내 뉴스룸</span>
+                <span>세계의 스타벅스</span>
+                <span>글로벌 뉴스룸</span>
+            </div>
+            <div class="sales">
+                <h5>CORPORATE SALES</h5>
+                <span>단체 및 기업 구매 안내</span>
+                <span>단체 주문 배달 안내</span>
+            </div>
+            <div class="partnership">
+                <h5>PARTNERSHIP</h5>
+                <span>신규 입점 제의</span>
+                <span>협력 고객사 등록신청</span>
+            </div>
+            <div class="online">
+                <h5>ONLINE COMMUNITY</h5>
+                <span>페이스북</span>
+                <span>트위터</span>
+                <span>유튜브</span>
+                <span>인스타그램</span>
+            </div>
+            <div class="recruit">
+                <h5>RECRUIT</h5>
+                <span>채용 소개</span>
+                <span>채용 지원하기</span>
+            </div>
+            <img src="image/footer_logo.png" alt="">
+        </div>
+        <div class="footer_col2"></div>
+        <div class="footer_col3"></div>
+        <div class="footer_col4"></div>
+        <div class="footer_col5"></div>
+    </footer>
+</body>
+</html>
     </main>
     
 </body>
