--- a/0113.html
+++ b/0113.html
@@ -213,10 +213,46 @@
             </div>
             <img src="image/footer_logo.png" alt="">
         </div>
-        <div class="footer_col2"></div>
-        <div class="footer_col3"></div>
-        <div class="footer_col4"></div>
-        <div class="footer_col5"></div>
+        <div class="footer_col2">
+            <img src="image/footer_award_2211_01.jpg" alt="여성가족부장관상">
+            <img src="image/footer_award_2211_02.jpg" alt="행정안전부장관 표창">
+            <img src="image/footer_award_2211_03.jpg" alt="농림축산식품부 장관상">
+            <img src="image/footer_award_2211_04.jpg" alt="국회산업통상자원중소벤처위원회장상">
+            <img src="image/footer_award_2211_05.jpg" alt="대통령직속 일자리 위원회 부위원장상">
+            <img src="image/footer_award_2211_06.jpg" alt="동반성장위원회 위원장상">
+            <img src="image/footer_award_2211_07.jpg" alt="CCM 인증 획득">
+        </div>
+        <div class="footer_col3">
+            <a href=""><span>개인정보처리방침</span></a>
+            <span class="divider">|</span>
+            <a href=""><span>영상정보처리기기 운영관리 방침</span></a>
+            <span class="divider">|</span>
+            <a href=""><span>홈페이지 이용약관</span></a>
+            <span class="divider">|</span>
+            <a href=""><span>위치정보 이용약관</span></a>
+            <span class="divider">|</span>
+            <a href=""><span>스타벅스 카드 이용약관</span></a>
+            <span class="divider">|</span>
+            <a href=""><span>비회원 이용약관</span></a>
+            <span class="divider">|</span>
+            <a href=""><span>My DT Pass 서비스 이용약관</span></a>
+            <span class="divider">|</span>
+            <a href=""><span>윤리경영 핫라인</span></a>
+        </div>
+        <div class="footer_col4">
+            <a href=""><span>찾아오시는 길</span></a>
+            <a href=""><span>신규입점제의</span></a>
+            <a href=""><span>사이트 맵</span></a>
+        </div>
+        <div class="footer_col5">
+            <span>사업자등록번호 : 201-81-21515</span>
+            <span>주식회사 에스씨케이컴퍼니 대표이사 : 손정현</span>
+            <span>TEL : 1522-3232</span>
+            <span>개인정보 책임자 : 이현수</span>
+        </div>
+        <div class="footer_col6">
+            ⓒ 2023 Starbucks Coffee Company. All Rights Reserved.
+        </div>
     </footer>
 </body>
 </html>
