--- a/0113.html
+++ b/0113.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>20230114 스타벅스 메인</title>
     <link rel="stylesheet" href="0113.css">
+    <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
+    <script src="0113.js"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -24,20 +25,64 @@
             </div>
             <div class="info_con">
                 <ul class="info">
-                    <a href=""><li>Sign in</li></a>
-                    <a href=""><li>My Starbucks</li></a>
-                    <a href=""><li>Customer Service & Ideas</li></a>
-                    <a href=""><li>Find a Store</li></a>
-                    <a href=""><li class="info_search_li"><img src="image/starbucks_search_icon.png" alt="검색 아이콘"></li></a>
+                    <li><a href="">Sign in</a></li>
+                    <li><a href="">My Starbucks</a></li>
+                    <li><a href="">Customer Service & Ideas</a></li>
+                    <li><a href="">Find a Store</a></li>
+                    <li><a href="">class="info_search_li"><img src="image/starbucks_search_icon.png" alt="검색 아이콘"></a></li>
                 </ul>
                 <ul class="menu">
-                    <a href=""><li>COFFEE</li></a>
-                    <a href=""><li>MENU</li></a>
-                    <a href=""><li>STORE</li></a>
-                    <a href=""><li>RESPONSIBILITY</li></a>
-                    <a href=""><li>STARBUCKS REWARDS</li></a>
-                    <a href=""><li>CORPORATE SALES</li></a>
-                    <a href=""><li>WHAT'S NEW</li></a>
+                    <li><a href="">COFFEE</a>
+                        <ul>
+                            <li><a href="">커피</a></li>
+                            <li><a href="">스타벅스 원두</a></li>
+                            <li><a href="">스타벅스 비아</a></li>
+                            <li><a href="">스타벅스앳홈 by 캡슐</a></li>
+                            <li><a href="">나와 어울리는 커피</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">MENU</a>
+                        <ul>
+                            <li><a href="">커피 이야기</a></li>
+                            <li><a href="">농장에서 우리의 손으로</a></li>
+                            <li><a href="">최상의 아라비카 원두</a></li>
+                            <li><a href="">스타벅스 로스트 스펙트럼</a></li>
+                            <li><a href="">스타벅스 디카페인</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">STORE</a>
+                        <ul>
+                            <li><a href="">스타벅스 리저브</a></li>
+                            <li><a href="">RESERVE MAGAZINE</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">RESPONSIBILITY</a>
+                        <ul>
+                            <li><a href="">에스프레소 음료</a></li>
+                            <li><a href="">도피오</a></li>
+                            <li><a href="">에스프레소 마끼아또</a></li>
+                            <li><a href="">아메리카노</a></li>
+                            <li><a href="">마키아또</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">STARBUCKS REWARDS</a>
+                        <ul>
+                            <li><a href="">최상의 커피를 즐기는 법</a></li>
+                            <li><a href="">커피 프레스</a></li>
+                            <li><a href="">푸어 오버</a></li>
+                            <li><a href="">아이스 푸어 오버</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">CORPORATE SALES</a>
+                        <ul>
+                            <li><a href=""></a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">WHAT'S NEW</a>
+                        <ul>
+                            <li><a href=""></a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
